# parser_and_search

./: Dockerfile  _test_copy.py  app.py  app_func.py  config.py  coockie.py  data.txt  main.py  pyproject.toml  requirements.txt  tools.py
_watermark/: page.html  style.css
api/: api.py  models.py
docker_automation/: Dockerfile  app.py  selenium_standalone.py
extensions/: add_id_to_image_name.py  get_statistic.py
from_python/: Pigoli Athena Capitonne.max  Pigoli Panca Diana.max
parse_file_formats/: json_format.py  parse_file_formats.py  textfile_format.py
search/: ToSearchFile.py  archive.py  images_compare.py  search_on_web.py
test_folder_to_get_outputs/: 1397438.59df159c1b5ba.txt  1407644.59e476e45b784.txt  1425129.59eca2694b015.txt  14871.526af28968127.txt  1584399.5a4215f633b64.txt  16504.526b026241b93.txt  1844518.5ad0527829736.txt  19521.526b3d7b71aa1.txt  23133.526b7f51be1a0.txt  23661.526b87860f11a.txt  2377194.5c7a5ed0cd08e.txt  2439225.5cd6f22f61aac.txt  24950.526b91fcd563b.txt  2535021.5d6a45b3ab6e1.txt  26210.526ba30f18463.txt  2824665.5ea9bb2a7ef43.txt  3367065.606e1209a489f.txt  3437417.60a3a2c363426.txt  37037.526d44b91fb54.txt  441523.56900853943c9.txt  4496147.6321cb702007b.txt  4712220.638f89c55a336.txt  535003.571e31e550a2d.txt  543008.572f0d3e4a302.txt  939312.58c2d26b6edb1.txt  to_generate_statistic_2024-03-05 16:16:40.json  to_generate_statistic_2024-03-05 16:32:00.json  to_generate_statistic_2024-03-08 02:31:25.json  to_generate_statistic_2024-03-08 02:33:42.json  to_generate_statistic_2024-03-08 02:51:02.json  (+5 more)
utils/: utils.py  (+7 more)
(+10 files in other folders)
