[tool.poetry]
name = "parser-and-search"
version = "0.1.0"
description = ""
authors = ["Suren <parsyansuren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^8.0.0"
poetry = "^1.7.1"
pydantic = "^2.6.1"
ruff = "^0.2.2"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
unrar = "^0.4"
rarfile = "^4.1"
py7zr = "^0.20.8"
tdqm = "^0.0.1"
flask = "^3.0.2"
selenium = "^4.19.0"
undetected-chromedriver = "^3.5.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
